Ajout redirection vers docker-django-front

--- a/docker-front/index.html
+++ b/docker-front/index.html
@@ -65,15 +65,6 @@
     <script type="text/javascript">
       jQuery(document).ready(function($){
 
-          document.addEventListener('loginsubmit', () => {
-            document.getElementById('loginsubmit').addEventListener('click', sendReq);
-            //pretend to get a token after logging in
-            sessionStorage.setItem('LetsBookUserToken',
-                JSON.stringify(
-                    'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c'
-                    )
-            );
-        });
         
           $('#loginsubmit').click(function () {
               console.log('Login');
@@ -109,6 +100,8 @@
                             data.token    
                           )
                       );
+                      window.location.href = "http://localhost:8081/projects";
+                      console.log("redirection...");
                   },
                   error:function(request, status, error){
 
